nov 11 recordings and changes

--- a/ipy_notebooks/calibration_multicam.ipynb
+++ b/ipy_notebooks/calibration_multicam.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\skateboard_gui\\\\test_programs\\\\test_data\\\\calibration3\\\\kinect_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_11\\\\calibration1\\\\kinect_color.msgpack'"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,27 +40,28 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "\n",
-    "_folder_name = \"calibration3\"\n",
-    "_kinect_pth = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"kinect_color.msgpack\")\n",
-    "_kinect_ts = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"kinect_timestamp.msgpack\")\n",
-    "_rs_pth = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"realsense_color.msgpack\")\n",
-    "_rs_ts = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"realsense_timestamp.msgpack\")\n",
-    "_webcam_pth = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"webcam_color.msgpack\")\n",
-    "_webcam_ts = os.path.join(_pth,\"test_programs\", \"test_data\",_folder_name,\"webcam_timestamp.msgpack\")\n",
+    "_folder_name = \"calibration1\"\n",
+    "_parent_folder = \"multi_cam_nov_11\"\n",
+    "_kinect_pth = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder, _folder_name,\"kinect_color.msgpack\")\n",
+    "_kinect_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"kinect_timestamp.msgpack\")\n",
+    "_rs_pth = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"realsense_color.msgpack\")\n",
+    "_rs_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"realsense_timestamp.msgpack\")\n",
+    "_webcam_pth = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_color.msgpack\")\n",
+    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",_parent_folder,_folder_name,\"webcam_timestamp.msgpack\")\n",
     "\n",
     "_kinect_pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 757/757 [00:01<00:00, 685.09it/s]\n"
+      "100%|██████████| 953/953 [00:01<00:00, 710.04it/s]\n"
      ]
     },
     {
@@ -68,21 +69,22 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1489, 1, 4, 2)\n",
+      "corners_list:  (1790, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[991.88215924   0.         467.98776903]\n",
-      " [  0.         998.45028923 343.49533565]\n",
-      " [  0.           0.           1.        ]] \n",
+      " [[1.04950220e+03 0.00000000e+00 4.69429477e+02]\n",
+      " [0.00000000e+00 1.05438245e+03 3.16160990e+02]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[-0.1856851   1.86327532  0.00992736  0.00774786 -7.11877527]]\n"
+      " [[-1.16719121e-01  1.17748891e+00  7.34794238e-03  2.34002449e-03\n",
+      "  -6.07996129e+00]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 455/455 [00:00<00:00, 488.74it/s]\n"
+      "100%|██████████| 573/573 [00:00<00:00, 842.06it/s]\n"
      ]
     },
     {
@@ -90,21 +92,22 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (866, 1, 4, 2)\n",
+      "corners_list:  (1443, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[866.37890998   0.         383.68364996]\n",
-      " [  0.         868.90270462 316.83616933]\n",
+      " [[919.58329796   0.         358.41603821]\n",
+      " [  0.         924.29199348 331.4448109 ]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[-0.08468506  1.05351765  0.02036855  0.00616806 -2.96163325]]\n"
+      " [[ 1.56003837e-02  4.08513581e-02  3.77390128e-02 -1.08390633e-04\n",
+      "  -8.57340771e+00]]\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 456/456 [00:01<00:00, 408.23it/s]\n"
+      "100%|██████████| 576/576 [00:01<00:00, 539.33it/s]\n"
      ]
     },
     {
@@ -112,15 +115,15 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1653, 1, 4, 2)\n",
+      "corners_list:  (1759, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[843.07241432   0.         372.94472541]\n",
-      " [  0.         849.9414162  290.85253944]\n",
-      " [  0.           0.           1.        ]] \n",
+      " [[1.24340045e+03 0.00000000e+00 4.13993114e+02]\n",
+      " [0.00000000e+00 1.25330319e+03 2.59828653e+02]\n",
+      " [0.00000000e+00 0.00000000e+00 1.00000000e+00]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 3.44977269e-02  1.08758596e+00  1.96007438e-02  6.25848881e-03\n",
-      "  -1.07998057e+01]]\n"
+      " [[ 1.53382979e-01 -4.06628650e-01  1.47683678e-03  1.80064686e-02\n",
+      "  -1.07844136e+01]]\n"
      ]
     }
    ],
