--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\single_cam_oct_21\\\\calibration11\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_11\\\\calibration2_webcam\\\\webcam_color.msgpack'"
       ]
      },
      "execution_count": 2,
@@ -40,9 +40,9 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "\n",
-    "_folder_name = \"calibration11\"\n",
-    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"single_cam_oct_21\", _folder_name,\"webcam_color.msgpack\")\n",
-    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"single_cam_oct_21\",_folder_name,\"webcam_timestamp.msgpack\")\n",
+    "_folder_name = \"calibration2_webcam\"\n",
+    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_11\", _folder_name,\"webcam_color.msgpack\")\n",
+    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_11\",_folder_name,\"webcam_timestamp.msgpack\")\n",
     "_webcam_pth"
    ]
   },
@@ -55,23 +55,22 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 469/469 [00:01<00:00, 338.20it/s]\n"
+      "100%|██████████| 742/742 [00:01<00:00, 717.25it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1793, 1, 4, 2)\n",
+      "Found [ 0  1  2  5 10] unique markers\n",
+      "corners_list:  (1550, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[854.18206253   0.         346.3795027 ]\n",
-      " [  0.         864.65874931 268.01454777]\n",
+      " [[792.50579482   0.         402.0548155 ]\n",
+      " [  0.         800.09890063 321.88932862]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 1.02169014e-01 -1.48557867e-01 -1.21573114e-03 -2.95257573e-03\n",
-      "  -3.29111851e+00]]\n"
+      " [[ 0.38201479 -4.83260648  0.0162865   0.02686491 13.37424455]]\n"
      ]
     }
    ],
