--- a/ipy_notebooks/ground_pane_capture_webcam.ipynb
+++ b/ipy_notebooks/ground_pane_capture_webcam.ipynb
@@ -237,7 +237,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.13 ('gs')",
+   "display_name": "Python 3.7.13 ('amd')",
    "language": "python",
    "name": "python3"
   },
@@ -256,7 +256,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
+    "hash": "f7b5cde20a443c2b17446bd8bc340c41b205a603133068520caed36857fb2eca"
    }
   }
  },
