--- a/ipy_notebooks/capture_kinect_frame.ipynb
+++ b/ipy_notebooks/capture_kinect_frame.ipynb
@@ -100,7 +100,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.7.11 ('py37t2')",
+   "display_name": "Python 3.7.13 ('gs')",
    "language": "python",
    "name": "python3"
   },
@@ -114,12 +114,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.7.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "07cf8e4ec2f40bff32486e8c8f167870d55b0d1fe8557518ec615be206ad7cc6"
+    "hash": "4221670f905fea9ae63d68da118e10d2cad93a36a65c3325530da287d71e9aea"
    }
   }
  },
