--- a/ipy_notebooks/ground_pane_capture.ipynb
+++ b/ipy_notebooks/ground_pane_capture.ipynb
@@ -423,9 +423,20 @@
     "    w_camera_matrix = webcam_calib[0]\n",
     "    w_dist_coeffs = webcam_calib[1]\n",
     "\n",
-    "w_rotmat, w_org = calculate_rotmat_from_3markers(corners, ids, marker_length=0.05, camera_matrix=w_camera_matrix, dist_coeffs=w_dist_coeffs)\n",
-    "\n",
-    "\n"
+    "w_rotmat, w_org = calculate_rotmat_from_3markers(corners, ids, marker_length=0.05, camera_matrix=w_camera_matrix, dist_coeffs=w_dist_coeffs)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\"\"\"save image in msgpack format\"\"\"\n",
+    "_wb_frame_file = os.path.join(_pth, \"webcam_frame.msgpack\")\n",
+    "with open(_wb_frame_file, \"wb\") as f:\n",
+    "    _f = mp.packb(gray_image, default=mpn.encode)\n",
+    "    f.write(_f)"
    ]
   },
   {
