--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_11\\\\calibration2_webcam\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_30fps_quad_sk\\\\webcam_color.msgpack'"
       ]
      },
      "execution_count": 2,
@@ -40,9 +40,9 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "\n",
-    "_folder_name = \"calibration2_webcam\"\n",
-    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_11\", _folder_name,\"webcam_color.msgpack\")\n",
-    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_11\",_folder_name,\"webcam_timestamp.msgpack\")\n",
+    "_folder_name = \"calibration_30fps_quad_sk\"\n",
+    "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_14\", _folder_name,\"webcam_color.msgpack\")\n",
+    "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_14\",_folder_name,\"webcam_timestamp.msgpack\")\n",
     "_webcam_pth"
    ]
   },
@@ -55,27 +55,28 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 742/742 [00:01<00:00, 717.25it/s]\n"
+      "100%|██████████| 1081/1081 [00:01<00:00, 930.29it/s]\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found [ 0  1  2  5 10] unique markers\n",
-      "corners_list:  (1550, 1, 4, 2)\n",
+      "Found [ 0  1  2  3  4  5  6  7  8  9 10] unique markers\n",
+      "corners_list:  (1778, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[792.50579482   0.         402.0548155 ]\n",
-      " [  0.         800.09890063 321.88932862]\n",
+      " [[846.01350255   0.         388.57985754]\n",
+      " [  0.         855.66120808 269.23563023]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 0.38201479 -4.83260648  0.0162865   0.02686491 13.37424455]]\n"
+      " [[ 6.57439973e-02 -1.94368239e-01  3.10106346e-03  3.18660008e-05\n",
+      "  -1.34797160e+00]]\n"
      ]
     }
    ],
    "source": [
-    "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = False, cvt_color=False, saving_name = \"webcam_calibration\")"
+    "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = True, cvt_color=False, saving_name = \"webcam_calibration\")"
    ]
   },
   {
