--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -28,7 +28,7 @@
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_30fps_sk_2\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_60fps_quad_sk_3\\\\webcam_color.msgpack'"
       ]
      },
      "execution_count": 6,
@@ -40,7 +40,7 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "\n",
-    "_folder_name = \"calibration_30fps_sk_2\"\n",
+    "_folder_name = \"calibration_60fps_quad_sk_3\"\n",
     "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_14\", _folder_name,\"webcam_color.msgpack\")\n",
     "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_14\",_folder_name,\"webcam_timestamp.msgpack\")\n",
     "_webcam_pth"
@@ -55,7 +55,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1276/1276 [00:01<00:00, 1076.83it/s]\n"
+      "100%|██████████| 2614/2614 [00:01<00:00, 2542.73it/s]\n"
      ]
     },
     {
@@ -63,20 +63,20 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1785, 1, 4, 2)\n",
+      "corners_list:  (1796, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[883.23417312   0.         400.73228755]\n",
-      " [  0.         888.99965332 236.58088208]\n",
+      " [[899.89417414   0.         363.2889578 ]\n",
+      " [  0.         905.00972909 253.05332909]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 8.20954543e-02  1.12219603e+00 -4.94327581e-03  4.79682633e-03\n",
-      "  -1.40973112e+01]]\n"
+      " [[ 2.37316212e-01 -1.84163186e+00  5.66608655e-04 -4.61511630e-03\n",
+      "   4.39768364e+00]]\n"
      ]
     }
    ],
    "source": [
-    "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = True, cvt_color=False, saving_name = \"webcam_calibration\")"
+    "calibrate_camera_from_file(_webcam_pth,save_to_dir = True ,img_flip = False, cvt_color=False, saving_name = \"webcam_calibration\")"
    ]
   },
   {
