--- a/ipy_notebooks/calibration_singlecam.ipynb
+++ b/ipy_notebooks/calibration_singlecam.ipynb
@@ -22,16 +22,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_60fps_quad_sk_3\\\\webcam_color.msgpack'"
+       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_15fps_sk\\\\webcam_color.msgpack'"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -40,7 +40,7 @@
     "_pth = os.getcwd()\n",
     "_pth = os.path.dirname(_pth)\n",
     "\n",
-    "_folder_name = \"calibration_60fps_quad_sk_3\"\n",
+    "_folder_name = \"calibration_15fps_sk\"\n",
     "_webcam_pth = os.path.join(_pth,\"recording_programs\",\"test_data\",\"multi_cam_nov_14\", _folder_name,\"webcam_color.msgpack\")\n",
     "_webcam_ts = os.path.join(_pth,\"recording_programs\", \"test_data\",\"multi_cam_nov_14\",_folder_name,\"webcam_timestamp.msgpack\")\n",
     "_webcam_pth"
@@ -48,14 +48,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 2614/2614 [00:01<00:00, 2542.73it/s]\n"
+      "100%|██████████| 565/565 [00:01<00:00, 485.88it/s]\n"
      ]
     },
     {
@@ -63,15 +63,15 @@
      "output_type": "stream",
      "text": [
       "Found [ 0  1  2  3  4  5  6  7  8  9 10 11] unique markers\n",
-      "corners_list:  (1796, 1, 4, 2)\n",
+      "corners_list:  (1793, 1, 4, 2)\n",
       "Calibrating camera .... Please wait...\n",
       " Camera matrix is \n",
-      " [[899.89417414   0.         363.2889578 ]\n",
-      " [  0.         905.00972909 253.05332909]\n",
+      " [[874.59046783   0.         366.44018221]\n",
+      " [  0.         881.45673935 268.42500753]\n",
       " [  0.           0.           1.        ]] \n",
       " And is stored in AR_CALIBRATION.msgpack file along with distortion coefficients : \n",
-      " [[ 2.37316212e-01 -1.84163186e+00  5.66608655e-04 -4.61511630e-03\n",
-      "   4.39768364e+00]]\n"
+      " [[ 1.29040791e-01 -1.00989575e-01  8.05214561e-03  2.63742822e-03\n",
+      "  -5.99529755e+00]]\n"
      ]
     }
    ],
