--- a/ipy_notebooks/video_frame_from_msgpk.ipynb
+++ b/ipy_notebooks/video_frame_from_msgpk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,27 +18,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\recording_programs\\test_data\\single_cam_oct_21\\sk13_rotation_t0\"\n",
+    "_pth = r\"C:\\Users\\CMC\\Documents\\openposelibs\\pose\\armbo\\recording_programs\\test_data\\multi_cam_nov_14\\sk16_15_forward_fast\"\n",
     "_video_pth = os.path.join(_pth, \"webcam_color.msgpack\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "# open msgpack file\n",
+    "counter = 0\n",
     "with open(_video_pth, \"rb\") as _file:\n",
     "    unpacker = mp.Unpacker(_file, object_hook=mpn.decode)\n",
     "    for i in unpacker:\n",
     "    # _frame = _frame.astype(np.uint8)\n",
     "        # plt.imshow(i, cmap=\"gray\")\n",
     "        # break\n",
+    "        counter += 1\n",
     "\n",
     "        cv2.imshow(\"frame\", i)\n",
     "        cv2.waitKey(1)\n",
@@ -48,11 +50,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "cv2.destroyAllWindows()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "369"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "counter"
    ]
   },
   {
