--- a/ipy_notebooks/percentage_missing.ipynb
+++ b/ipy_notebooks/percentage_missing.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
        "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\sk16_15_quad_fast'"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -45,12 +45,12 @@
     "\n",
     "_pth = os.path.join(_base_pth, _parent_folder, _folder_name)\n",
     "_calib_pth = os.path.join(_base_pth, _parent_folder, _calib_filename)\n",
-    "_pth\n"
+    "_pth"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,18 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'c:\\\\Users\\\\CMC\\\\Documents\\\\openposelibs\\\\pose\\\\armbo\\\\recording_programs\\\\test_data\\\\multi_cam_nov_14\\\\calibration_15fps_quad\\\\webcam_calibration.msgpack'"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "camera matrix [[868.26070009   0.         372.25985418]\n",
+      " [  0.         874.44598128 238.35209445]\n",
+      " [  0.           0.           1.        ]]\n",
+      "distortion [[ 7.07394532e-02 -3.42419375e-02 -1.86205766e-03  8.20734788e-04\n",
+      "  -4.82051694e+00]]\n"
+     ]
     }
    ],
    "source": [
@@ -94,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,13 +116,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
+      "returning dataframe\n",
       "returning dataframe\n",
       "returning dataframe\n",
       "returning dataframe\n",
@@ -213,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -253,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -263,11 +288,62 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# list folder names\n"
+    "# list folder names\n",
+    "# read from csv file\n",
+    "df = pd.read_csv(os.path.join(_base_pth, _parent_folder, \"00_analysis\", \"missing_data.csv\"))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.8163785989943249\n",
+      "1.5572252233363886\n",
+      "3.882755995432052\n"
+     ]
+    }
+   ],
+   "source": [
+    "# based on fps\n",
+    "fps = 60\n",
+    "_obj = \"quad\"\n",
+    "print(df[(df[\"fps\"] == fps) & (df[\"object\"] == _obj)][\"percentage_missing\"].mean())\n",
+    "print(df[(df[\"fps\"] == fps) & (df[\"object\"] == _obj)][\"percentage_missing\"].std())\n",
+    "print(df[(df[\"fps\"] == fps) & (df[\"object\"] == _obj)][\"percentage_missing\"].max())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.05517854312850756\n",
+      "0.09501264289496075\n",
+      "0.2141327623126338\n"
+     ]
+    }
+   ],
+   "source": [
+    "# based on movement speed\n",
+    "_obj = \"skateboard\"\n",
+    "_speed = \"fast\"\n",
+    "_fps = 60\n",
+    "print(df[(df[\"speed\"] == _speed) & (df[\"object\"] == _obj) & (df[\"fps\"] == _fps)][\"percentage_missing\"].mean())\n",
+    "print(df[(df[\"speed\"] == _speed) & (df[\"object\"] == _obj) & (df[\"fps\"] == _fps)][\"percentage_missing\"].std())\n",
+    "print(df[(df[\"speed\"] == _speed) & (df[\"object\"] == _obj) & (df[\"fps\"] == _fps)][\"percentage_missing\"].max())"
    ]
   },
   {
